@@ -5,6 +5,7 @@ BUG: TWizard Sidebar using TDataListItemRenderer has error (Qiang)
 ENH: Ticket#631 - Make TQueue implement Countable as the other collection classes (Knut)
 ENH: Ticket#634 - Override __toString for TXmlElement and TXmlDocument (Knut)
 NEW: Ticket#646 - Implement TAPCCache::add() (Knut)
+CHG: Ticket#649 - Wrong error message in THttpCookieCollection::itemAt() (Knut)
 
 Version 3.1.0 RC May 14, 2007
 =============================
